# lead-platform

./: .gitignore  CLAUDE.md  README.md  RUNBOOK.md
.github/workflows/: bookkeeping-leads.yml  cfo-leads.yml  daily-leads.yml  insurance-leads.yml
cfo_pipeline/: .env.example
cfo_pipeline/cfo_pipeline/: bookkeeping_run.py  models.py
cfo_pipeline/cfo_pipeline/sources/: bookkeeping.py
cfo_pipeline/data/: leads.db
cfo_pipeline/tests/: test_sources_bookkeeping.py
docs/: MULTI_NICHE_PLAN.md
docs/archive/: README.md
insurance_pipeline/: .env.example
insurance_pipeline/data/: leads.db
insurance_pipeline/insurance_pipeline/: daily_run.py
insurance_pipeline/tests/: test_inventory_trucking.py
leadgen/: .env.example  pyproject.toml
leadgen/leadgen/: db.py  enrichment.py  filters.py  llm.py  models.py  monitoring.py  run.py  scoring.py
leadgen/leadgen/niches/: __init__.py  accounting.py  base.py  cfo.py  cloud.py  msp.py  mssp.py
leadgen/leadgen/scripts/: audit.py
leadgen/leadgen/sources/: breaches.py  edgar_form_c.py  edgar_form_d.py  fractional_boards.py  jobs.py
leadgen/tests/: conftest.py  test_enrichment.py  test_models.py  test_monitoring.py  test_projection.py  test_scoring.py  test_sources_breaches.py  test_sources_edgar.py  test_sources_fractional.py  test_sources_jobs.py  test_sources_jobs_parsing.py  test_store.py
pipeline/data/: leads.db
recruiter_pipeline/: .env.example  README.md  pyproject.toml
recruiter_pipeline/recruiter_pipeline/: __init__.py  aggregate.py  daily_run.py  functions.py  seed_boards.json
recruiter_pipeline/recruiter_pipeline/sources/: ats.py
recruiter_pipeline/tests/: test_recruiter.py
