[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadgen"
version = "0.1.0"
description = "Buying-signal lead-magnet platform. One shared source layer feeds five niches (accounting, cfo, mssp, msp, cloud); a niche is a query over one deduped company store."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "rapidfuzz>=3.0",
    "openai>=1.50",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "python-jobspy>=1.1.70",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools]
packages = ["leadgen", "leadgen.sources", "leadgen.niches", "leadgen.scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*", "bs4", "feedparser", "jobspy", "pandas"]
ignore_missing_imports = true
